# octetos-saturno

./: .gitignore  ChangeLog  Makefile.am  configure.ac  octetos-saturno.dll.vcxproj  octetos-saturno.dll.vcxproj.filters  octetos-saturno.exe.sln  octetos-saturno.exe.vcxproj  octetos-saturno.exe.vcxproj.filters  saturno.cbp
src/: Array.hh  DB.hh  Engine.hh  Exception.cc  Exception.hh  Main-search.cc  Main.cc  Main.hh  Makefile.am  Saturno.cc  Saturno.hh  Search.hh  Sort.hh  Votacion.cc  Votacion.hh  exp-virtual.cc  exp-virtual.sh  main-saturno.cc  main.cc  octetos-saturno.pc.in  saturno-main.cc  saturno.cc  saturno.hh  search-binary.hh  sort-merge.hh
tests/: Makefile.am  apellidos.csv  main.cc  nombres-f.csv  nombres-m.csv
vs/dll/: octetos-saturno.dll.sln  octetos-saturno.dll.vcxproj  octetos-saturno.dll.vcxproj.filters
vs/tests/: tests.sln  tests.vcxproj  tests.vcxproj.filters
